--- a/store/templates/store/template.html
+++ b/store/templates/store/template.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Hello, Django</title>
-    </head>
-    <body>
-        <h1>Hello, Django</h1>
-    </body>
-</html>
+{% extends 'base.html' %}
+<!-- content area -->
+{% block content %}
+<!-- empty -->
+{% endblock %}
