--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -1,24 +1,66 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>{{ title }}</title>
+        <!-- -->
+        {% load bootstrap5 %}
+        <!-- -->
+        {% bootstrap_css %}
+        <!-- -->
+        {% bootstrap_javascript %}
+        <!-- -->
     </head>
     <body>
+        <header>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">
+                        <img
+                            src="{% static 'base/img/logo.png' %}"
+                            alt="Mystery Books Logo"
+                            height="108"
+                            class="d-inline-block align-text-top"
+                        />
+                    </a>
+                    <button
+                        class="navbar-toggler"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation"
+                    >
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'store' %}">Store</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
+                            </li>
+                        </ul>
+                        <div>
+                            {% if request.user.is_authenticated %}
+                            <p>Welcome, {{ request.user.username }}!</p>
+                            {% else %}
+                            <p>Would you like to <a href="{% url 'admin:index' %}">Login</a>?</p>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </header>
+
         <h1>{{ title }}</h1>
-
-        <ul>
-            <li><a href="{% url 'admin:index' %}">Login</a></li>
-            <li><a href="{% url 'index' %}">Home</a></li>
-            <li><a href="{% url 'store' %}">Store</a></li>
-        </ul>
-
-        {% if request.user.is_authenticated %}
-        <p>Welcome, {{ request.user.username }}!</p>
-        {% else %}
-        <p><a href="{% url 'admin:index' %}">Login</a></p>
-        {% endif %}
 
         <!-- Content block -->
         {% block content %}
