--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -45,6 +45,9 @@
                                 <a class="nav-link" href="{% url 'store' %}">Store</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" href="{% url 'new_book' %}">New Book</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
                             </li>
                         </ul>
