--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -9,13 +9,15 @@
         {% load bootstrap5 %}
         <!-- -->
         {% bootstrap_css %}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
+        <link rel="stylesheet" href="{% static 'base/css/styles.css' %}">
         <!-- -->
         {% bootstrap_javascript %}
         <!-- -->
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav class="navbar navbar-expand-sm bg-body-tertiary">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">
                         <img
